bk_ida/gccida/c1/rm_other_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1820:4: error: expected ';' after expression
rtx v3; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1820:5: error: use of undeclared identifier 'v3'
rtx v3; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1821:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1821:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1829:1: error: use of undeclared identifier 'v3'
v3 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1832:17: error: use of undeclared identifier 'v3'
if ( *( _WORD *)v3 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1834:1: error: use of undeclared identifier 'v4'
v4 = unlink_other_notes( v3, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1834:26: error: use of undeclared identifier 'v3'
v4 = unlink_other_notes( v3, rtx); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1835:6: error: use of undeclared identifier 'v3'
if ( v3 == tail ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1837:6: error: use of undeclared identifier 'v3'
if ( v3 == head ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1839:1: error: use of undeclared identifier 'v3'
v3 = v4; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1839:6: error: use of undeclared identifier 'v4'
v3 = v4; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1840:6: error: use of undeclared identifier 'v4'
if ( v4 == rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1843:1: error: use of undeclared identifier 'v3'
v3 = v3[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1843:6: error: use of undeclared identifier 'v3'
v3 = v3[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/haifa-sched.c:1845:9: error: use of undeclared identifier 'v3'
while ( v3 != rtx ); 
        ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_other_notes/src/obj/haifa-sched.o] Error 1
